# micro3

./: .gitignore  README.md
converter-service/: Dockerfile  go.mod  go.sum  main.go
converter-service/config/: config.go
converter-service/converter/: ffmpeg.go
converter-service/logger/: logger.go
converter-service/models/: errors.go  message.go
converter-service/queue/: consumer.go  publisher.go
converter-service/storage/: storage.go
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/status/[id]/: page.tsx
frontend/src/lib/: api.ts
infra/: docker-compose.yml
notification-service/: Dockerfile  pyproject.toml
notification-service/app/: config.py  consumer.py  logger.py  main.py
upload-service/: Dockerfile  README.md  pyproject.toml
upload-service/alembic/: env.py
upload-service/alembic/versions/: 030a90e4080c_add_retry_and_lifecycle_columns_to_.py  7622a28e25e6_add_users_and_video_ownership.py  d194ec194b8c_create_videos_table.py
upload-service/app/: auth.py  auth_routes.py  config.py  db.py  logger.py  main.py  models.py  queue.py  schemas.py  storage.py  video_routes.py
